Fix: Downgrade Java release to 17 to fix EclipseLink crash